--- a/app-pipelines.yml
+++ b/app-pipelines.yml
@@ -5,19 +5,20 @@ pool:
   name: AKS
   vmImage: ubuntu-latest
 
-steps:
-- task: UseDotNet@2
-  inputs:
-    version: '5.0.x'
-    includePreviewVersion: true
-
-- task: UseDotNet@2
-  inputs:
-    version: '3.0.x'
-    includePreviewVersion: true
-    
-
-
 stages:
-- template: stages/build.yaml
-- template: stages/deploy.yml
+- stage:
+  jobs:
+  - job: InstallJob
+    steps:
+    - task: UseDotNet@2
+      inputs:
+        version: '5.0.x'
+        includePreviewVersion: true
+
+    - task: UseDotNet@2
+      inputs:
+        version: '3.0.x'
+        includePreviewVersion: true
+    
+  - template: stages/build.yaml
+  - template: stages/deploy.yml
