--- a/stages/deploy.yml
+++ b/stages/deploy.yml
@@ -28,4 +28,12 @@
         command: publish
         publishWebProjects: True
         arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-        zipAfterPublish: True   
+        zipAfterPublish: True 
+        
+    - task: AzureWebApp@1
+                displayName: 'Azure app service deploy'
+                inputs:
+                  azureSubscription: 'Azure subscription 1 (f016713d-47fd-4917-a2c7-c2805377c59c)'
+                  appName: 'WebAppxs'
+                  appType: 'webApp'
+                  package: '$(Build.ArtifactStagingDirectory)'  
