--- a/stages/deploy.yml
+++ b/stages/deploy.yml
@@ -1,12 +1,12 @@
  stages:
- - stage: deploy
+ - stage: deploy app
    jobs: 
    - job: DeployJob
      steps: 
      - task: DotNetCoreCLI@2
        inputs:
          command: publish
-         publishWebProjects: True
+         publishWebProjects: false
          arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
          zipAfterPublish: True
 
