--- a/app-pipelines.yml
+++ b/app-pipelines.yml
@@ -14,13 +14,9 @@ stages:
     steps:
     - task: UseDotNet@2
       inputs:
-        version: '5.0.x'
+        version: '2.2'
         includePreviewVersion: True
 
-    - task: UseDotNet@2
-      inputs:
-        version: '3.0.x'
-        includePreviewVersion: True
-    
+      
 - template: stages/build.yml
 - template: stages/deploy.yml
