--- a/app-pipelines.yml
+++ b/app-pipelines.yml
@@ -14,7 +14,7 @@ stages:
     steps:
     - task: UseDotNet@2
       inputs:
-        version: '2.2.x'
+        version: '2.2.0'
         includePreviewVersion: True
 
       
