Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,4 +59,5 @@ stages:
         azureSubscription: 'Azure subscription 1 (f016713d-47fd-4917-a2c7-c2805377c59c)'
         AppName: 'aap7776767'
         package: '$(build.ArtifactStagingDirectory)'
+        startUpCommand: 'dotnet run'
 
